scrollbar fix

--- a/src/components/Dropdown/components/DropdownList.module.scss
+++ b/src/components/Dropdown/components/DropdownList.module.scss
@@ -18,7 +18,7 @@
   }
 
   &::-webkit-scrollbar {
-    width: 4px;
+    width: 6px;
   }
 
   &::-webkit-scrollbar-track {
@@ -32,10 +32,12 @@
   &::-webkit-scrollbar-thumb {
     background: $hover-gray;
     border-radius: 100px;
-    padding: 2px 0;
+    // padding: 2px 0;
 
     &:active {
       background: $color-dark-grey;
     }
   }
+
+
 }
